<resources>
    <string name="app_name">CONVENE_YO</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_test">test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_registration">Registration</string>
    <string name="Edit_text_1">Enter your full name</string>
    <string name="Text_view_1">Member 1</string>
    <string name="Text_view_2">Mobile no</string>
    <string name="Edit_text_2">+919876543210</string>
    <string name="Text_view_3">Email id</string>
    <string name="Edit_text_3">Active Email id</string>
    <string name="Text_view_5">Year</string>
    <string name="Year_prompt">Select your year</string>
    <string name="TE">TE</string>
    <string name="BE">BE</string>
    <string name="Text_view_4">Branch</string>
    <string name="Branch_prompt">Your Branch</string>
    <string name="Branch_1">Computer</string>
    <string name="Branch_2">IT</string>
    <string name="Branch_3">Electronics</string>
    <string name="Branch_4">Electrical</string>
    <string name="Text_view_6">College</string>
    <string name="College_prompt">Select your college</string>
    <string name="a4950">A P Shah Institute of Technology Thane</string>
    <string name="a5840">Abhinav Education Societys College of Engineering and Technology (Degree) Wadwadi</string>
    <string name="a8194">Adarsh Shikshan Prasarak Mandals K. T. Patil College of Engineering and Technology Osmanabad</string>
    <string name="a2547">Aditya Engineering College  Beed</string>
    <string name="a1376">Adsuls Technical Campus Chas Dist. Ahmednagar</string>
    <string name="a2553">Agnel Charities FR. C. Rodrigues Institute of Technology Vashi Navi Mumbai</string>
    <string name="a3730">Ahmednagar Jilha Maratha Vidya Prasarak Samajache Shri. Chhatrapati Shivaji Maharaj College of Engineering Nepti</string>
    <string name="a4907">Al-Ameen Educational and Medical Foundation College of Engineering Koregaon Bhima</string>
    <string name="a6083">Alard Charitable Trusts Alard College of Engineering and Management Pune</string>
    <string name="a7260">Aldel Education Trusts St. John College of Engineering and Management Vevoor Palghar</string>
    <string name="a1187">All India Shri Shivaji Memorial Societys College of Engineering Pune</string>
    <string name="a5776">All India Shri Shivaji Memorial Societys Institute of Information TechnologyPune</string>
    <string name="a2364">Amar Seva Mandals Shree Govindrao Vanjari College of Engineering and Technology Nagpur</string>
    <string name="a6953">Amruta Vaishnavi Education and Welfare Trusts Shatabdi Institute of Engineering and Research Agaskhind Tal. Sinnar</string>
    <string name="a3540">Amrutvahini Sheti and Shikshan Vikas Sansthas Amrutvahini College of Engineering Sangamner</string>
    <string name="a8129">Anantrao Pawar College of Engineering and Research Pune</string>
    <string name="a4717">Anjuman College of Engineering and Technology Nagpur</string>
    <string name="a1305">Anjuman-I-Islams Kalsekar Technical Campus Panvel</string>
    <string name="a5894">Anjuman-I-Islams M.H. Saboo Siddik College of Engineering Byculla Mumbai</string>
    <string name="a2482">Ankush Shikshan Sansthas G. H. Raisoni Institute of Engineering and Technology Nagpur</string>
    <string name="a7071">Ankush Shikshan Sansthas G.H.Raisoni College of Engineering Nagpur</string>
    <string name="a3659">Annasaheb Dange College of Engineering and Technology Ashta Sangli</string>
    <string name="a3007">Atharva College of EngineeringMalad(West)Mumbai</string>
    <string name="a1301">Aurangabad College of Engineering Naygaon Savangi Aurangabad</string>
    <string name="a7596">B.R. Harne College of Engineering and Technology Karav Tal-Ambernath.</string>
    <string name="a5890">B.R.A.C.Ts Vishwakarma Institute of Information Technology Kondhwa (Bk.) Pune</string>
    <string name="a4184">Balaghat Engineering CollegeRuddha Ahmedpur</string>
    <string name="a2478">Bansilal Ramnath Agarawal Charitable Trusts Vishwakarma Institute of Technology Bibwewadi Pune</string>
    <string name="a8773">Bhagwant Institute of Technology Barshi</string>
    <string name="a7067">Bharati Vidyapeeth College of Engineering Belpada Kharghar Navi Mumbai</string>
    <string name="a5361">Bharati Vidyapeeths College of Engineering for Women Katraj Dhankawadi Pune</string>
    <string name="a3655">Bharati Vidyapeeths College of Engineering Kolhapur</string>
    <string name="a1949">Bharati vidyapeeths Group of Institute. Lavale Technical Campus Mulshi Pune.</string>
    <string name="a8244">Bhartiya Vidya Bhavans Sardar Patel Institute of Technology  Andheri Mumbai</string>
    <string name="a6538">Bhausaheb Charitable Trusts Bhausaheb Mulik College of Engineering Nagpur</string>
    <string name="a4832">Bhonsla College of Engineering and Research Akola</string>
    <string name="a3126">Brahma Valley College of Engineering and Research Trimbakeshwar Nashik</string>
    <string name="a1420">Chhartrapati Shivaji Maharaj Institute of Technology Shedung Panvel</string>
    <string name="a7714">Choudhary Attar Singh Yadav Memorial TrustSiddhant College of Engineering Maval</string>
    <string name="a6008">College of Engineering and Technology North Maharashtra Knowledge City Jalgaon</string>
    <string name="a4302">College of Engineering Pune</string>
    <string name="a2596">College Of Engineering Vairag Tal. Barshi</string>
    <string name="a8891">CSMSS Chh. Shahu College of Engineering Aurangabad</string>
    <string name="a7185">Cummins College of Engineering For Women Sukhali (Gupchup) Tal. Hingna, Hingna Nagpur</string>
    <string name="a5479">D. Y. Patil College of Engineering Ambi Talegaon Maval</string>
    <string name="a2813">D. Y. Patil Institute of Engineering and Technology Ambi</string>
    <string name="a5960">D.Y. Patil College of Engineering and Technology Kolhapur</string>
    <string name="a1106">D.Y.Patil Education SocietysD.Y.Patil Technical Campus Faculty of Engineering and Faculty of ManagementTalsandeKolhapur.</string>
    <string name="a4254">Datta Meghe Institute of Medical Sciences Datta Meghe Institute of Engineering and Technology and Research Savangi (Meghe)</string>
    <string name="a7401">Dattajirao Kadam Technical Education Societys Textile and Engineering Institute Ichalkaranji.</string>
    <string name="a2548">Dattakala Group Of Institutions Swami - Chincholi Tal. Daund Dist. Pune</string>
    <string name="a5695">Deogiri Institute of Engineering and Management Studies Aurangabad</string>
    <string name="a8843">Department of Technology Shivaji University Kolhapur</string>
    <string name="a3989">Dhamangaon Education Societys College of Engineering and Technology Dhamangaon</string>
    <string name="a7137">Dhananjay Mahadik Group of Institutions Kagal Kolhapur</string>
    <string name="a2283">Dhole Patil Education Society Dhole Patil College of Engineering Wagholi Tal. Haveli</string>
    <string name="a5431">Dilkap Research Institute Of Engineering and Management Studies At.Mamdapur Post- Neral Tal- Karjat Mumbai</string>
    <string name="a8578">Dnyanshree Institute Engineering and Technology Satara</string>
    <string name="a3725">Don Bosco Institute of Technology Mumbai</string>
    <string name="a6872">Dr. A. D. Shinde College Of Engineering Tal.Gadhinglaj Kolhapur</string>
    <string name="a2019">Dr. Ashok Gujar Technical Institutes Dr. Daulatrao Aher College of Engineering Karad</string>
    <string name="a5166">Dr. Babasaheb Ambedkar College of Engineering and Research Wanadongri Nagpur</string>
    <string name="a8314">Dr. Babasaheb Ambedkar Technological University Lonere</string>
    <string name="a3460">Dr. Bhausaheb Nadurkar College of Engineering WaghapurYavatmal</string>
    <string name="a6608">Dr. D Y Patil Pratishthans College of Engineering Kolhapur</string>
    <string name="a1754">Dr. D. Y. Patil Educational Academys D.Y.Patil School of Engineering Academy Ambi</string>
    <string name="a4902">Dr. D. Y. Patil Pratishthans D.Y.Patil College of Engineering Akurdi Pune</string>
    <string name="a8049">Dr. D. Y. Patil School of Engineering and Technology Charholi(Bk) Via Lohgaon Pune</string>
    <string name="a3196">Dr. D. Y. Patil School OF Engineering Lohegaon Pune</string>
    <string name="a6343">Dr. D. Y. Patil Vidya Pratishthan Society Dr .D. Y. Patil Institute of Engineering and Technology PimpriPune</string>
    <string name="a1490">Dr. J. J. Magdum Charitable Trusts Dr. J.J. Magdum College of Engineering Jaysingpur</string>
    <string name="a4637">Dr.D.Y.Patil College Of Engineering and InnovationTalegaon</string>
    <string name="a7785">Dr.Rajendra Gode Institute of Technology and Research Amravati</string>
    <string name="a2931">Dwarka Bahu Uddeshiya Gramin Vikas Foundation Rajarshri Shahu College of Engineering Buldhana</string>
    <string name="a6079">Everest Education Society Group of Institutions (Integrated Campus) Ohar</string>
    <string name="a1225">Excelsior Education Societys K.C. College of Engineering and Management Studies and Research Kopri Thane (E)</string>
    <string name="a4373">Fabtech Technical Campus College of Engineering and Research Sangola</string>
    <string name="a7520">Flora Institute of Technology Khopi Near Khed Shivapur Toll Plaza Pune</string>
    <string name="a2667">Fr. Conceicao Rodrigues College of Engineering BandraMumbai</string>
    <string name="a5814">G. H. Raisoni College of Engineering and Management Ahmednagar</string>
    <string name="a8962">G. H.Raisoni Institute of Engineering and Technology Wagholi Pune</string>
    <string name="a4108">G. S. Mandals Maharashtra Institute of Technology Aurangabad</string>
    <string name="a7256">G.H. Raisoni college of Engineering and Management Amravati</string>
    <string name="a2402">G.H. Raisoni Institute of Engineering and Management Jalgaon</string>
    <string name="a5550">G.H.Raisoni Academy of Engineering and Technology Nagpur</string>
    <string name="a8697">G.H.Raisoni College of Engineering and Management Wagholi Pune</string>
    <string name="a3843">G.M.Vedak Institute of Technology Tala Raigad.</string>
    <string name="a6991">Geetai Charitable Trusts Khurana Sawant Institute of Engineering and Technology Balsond Hingoli.</string>
    <string name="a2137">Genba Sopanrao Moze College of Engineering Baner-Balewadi Pune</string>
    <string name="a5285">Genba Sopanrao Moze Trust Parvatibai Genba Moze College of EngineeringWagholi Pune</string>
    <string name="a8432">Genesis Insitute of Technology Kasarwadi Dist Kolhapur</string>
    <string name="a3579">Gharda Foundations Gharda Institute of TechnologyKhed Ratnagiri</string>
    <string name="a6726">Godavari Foundations Godavari College Of Engineering Jalgaon</string>
    <string name="a7778">Gokhale Education Societys R.H. Sapat College of Engineering Management Studies and Research Nashik</string>
    <string name="a5351">Gondia Education Societys Manoharbhai Patel Institute Of Engineering and Technology Shahapur Bhandara</string>
    <string name="Text_view_7">City</string>
    <string name="Edit_text_4">City in which your college is located</string>
    <string name="header1">Team Members</string>
    <string name="header2">Project Details</string>
    <string name="Text_view_8">Project Title</string>
    <string name="Edit_text_5">Enter your full Project Title</string>
    <string name="Text_view_9">Project Domain</string>
    <string name="Domain_prompt">Choose Project Domain</string>
    <string name="Text_view_10">Guide Name</string>
    <string name="Edit_text_6">Enter your guide name</string>
</resources>